@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-24T16:29:57Z",
-  "count_outdated" : 594,
-  "uniques_outdated" : 340,
-  "count" : 641,
+  "timestamp" : "2022-10-25T01:54:25Z",
+  "count_outdated" : 596,
+  "uniques_outdated" : 341,
+  "count" : 643,
   "uniques" : 367,
   "clones" : [
-    {
-      "timestamp": "2022-10-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-10-11T00:00:00Z",
       "count": 2,
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-10-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
